[gd_scene load_steps=4 format=3 uid="uid://wgfhrt0csw1w"]

[ext_resource type="Script" path="res://Scenes/Menu/pause_menu.gd" id="1_c62km"]
[ext_resource type="FontFile" uid="uid://f7mrciexqi7f" path="res://Assets/Fonts/SPACE RETRO.TTF" id="2_hi8ig"]
[ext_resource type="PackedScene" uid="uid://bqemmj5sudlam" path="res://Scenes/Menu/volume_slider.tscn" id="3_j7qbm"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c62km")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 189

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 78
alignment = 2

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_hi8ig")
theme_override_font_sizes/font_size = 176
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(443.32, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_hi8ig")
theme_override_font_sizes/font_size = 65
text = "Continue"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(443.32, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_hi8ig")
theme_override_font_sizes/font_size = 65
text = "Main Menu"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 623.0
offset_right = -1202.0
offset_bottom = -307.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-1109, -407)

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 130

[node name="FullScreen" type="Label" parent="CanvasLayer/MarginContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("2_hi8ig")
theme_override_font_sizes/font_size = 66
text = "Fullscreen
"

[node name="CheckButton" type="CheckButton" parent="CanvasLayer/MarginContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Sliders" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 1323.0
offset_top = 422.0
offset_right = 1796.0
offset_bottom = 964.0
theme_override_constants/separation = 38

[node name="MasterVoume" type="Label" parent="CanvasLayer/Sliders"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("2_hi8ig")
theme_override_font_sizes/font_size = 87
text = "Volume
"

[node name="VolumeSlider" parent="CanvasLayer/Sliders" instance=ExtResource("3_j7qbm")]
modulate = Color(0.959183, 0.000114744, 0.767214, 1)
layout_mode = 2
bus_name = "Master"

[node name="MusicVolume" type="Label" parent="CanvasLayer/Sliders"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("2_hi8ig")
theme_override_font_sizes/font_size = 87
text = "Music
"

[node name="VolumeSlider2" parent="CanvasLayer/Sliders" instance=ExtResource("3_j7qbm")]
modulate = Color(0.959183, 0.000114744, 0.767214, 1)
layout_mode = 2
bus_name = "Music"

[node name="SFXVoume" type="Label" parent="CanvasLayer/Sliders"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("2_hi8ig")
theme_override_font_sizes/font_size = 87
text = "SFX"

[node name="VolumeSlider3" parent="CanvasLayer/Sliders" instance=ExtResource("3_j7qbm")]
modulate = Color(0.959183, 0.000114744, 0.767214, 1)
layout_mode = 2
bus_name = "SFX"

[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_button_down"]
[connection signal="button_down" from="CanvasLayer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_button_down"]
[connection signal="toggled" from="CanvasLayer/MarginContainer2/HBoxContainer4/CheckButton" to="." method="_on_check_button_toggled"]
